--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -1,3 +1,57 @@
+/*-------------------------------------------------------------*/
+body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", 
+    "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 300;
+}
+.row {
+    margin: 30px 0;
+}
+
+#quicknav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+}
+
+#quicknav ul li { 
+    display: inline; 
+}
+
+#quicknav ul li a {
+    text-decoration: none;
+    padding: .2em 1em;
+}
+
+.btn-danger, 
+.btn-success, 
+.btn-info, 
+.btn-warning, 
+.btn-primary {
+    width: 105px;
+}
+
+.btn-default {
+    margin-bottom: 40px;
+}
+/*-------------------------------------------------------------*/
+
+#head {
+	width: 100%;
+    text-align: center;
+    background-color: #3F51B5;
+}
+
+
+#footer {
+	 width: 100%;
+    text-align: center;
+    background-color: #3F51B5;
+}
+
+
+/*-----------------------Coupon-------------------------------*/
 .coupon {
     border: 3px dashed #bcbcbc;
     border-radius: 10px;
@@ -106,55 +160,89 @@ sup {
 }
 
 
-
-/*------------------dont copy these lines----------------------*/
-body {
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", 
-    "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    font-weight: 300;
+/*---------------------------Table------------------------------*/
+table a:link {
+	color: #3F51B5;
+	font-weight: bold;
+	text-decoration:none;
 }
-.row {
-    margin: 30px 0;
+table a:visited {
+	color: #999999;
+	font-weight:bold;
+	text-decoration:none;
+}
+table a:active,
+table a:hover {
+	color: #bd5a35;
+	text-decoration:underline;
+}
+table {
+	font-family:Arial, Helvetica, sans-serif;
+	color:#666;
+	font-size:12px;
+	text-shadow: 1px 1px 0px #fff;
+	background:#fff;
+	border:#ccc 1px solid;
+
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+
+	-moz-box-shadow: 0 1px 2px #d1d1d1;
+	-webkit-box-shadow: 0 1px 2px #d1d1d1;
+	box-shadow: 0 1px 2px #d1d1d1;
+}
+table th {
+	padding:21px 25px 22px 25px;
+	border-top:1px solid #fafafa;
+	border-bottom:1px solid #e0e0e0;
+}
+table th:first-child {
+	text-align: left;
+	padding-left:20px;
+}
+table tr:first-child th:first-child {
+	-moz-border-radius-topleft:3px;
+	-webkit-border-top-left-radius:3px;
+	border-top-left-radius:3px;
+}
+table tr:first-child th:last-child {
+	-moz-border-radius-topright:3px;
+	-webkit-border-top-right-radius:3px;
+	border-top-right-radius:3px;
+}
+table tr {
+	text-align: center;
+	padding-left:20px;
+}
+table td:first-child {
+	text-align: left;
+	padding-left:20px;
+	border-left: 0;
+}
+table td {
+	padding:18px;
+	border-top: 1px solid #ffffff;
+	border-bottom:1px solid #e0e0e0;
+	border-left: 1px solid #e0e0e0;
+
 }
 
-#quicknav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    text-align: center;
+table tr:last-child td {
+	border-bottom:0;
 }
-
-#quicknav ul li { 
-    display: inline; 
+table tr:last-child td:first-child {
+	-moz-border-radius-bottomleft:3px;
+	-webkit-border-bottom-left-radius:3px;
+	border-bottom-left-radius:3px;
 }
-
-#quicknav ul li a {
-    text-decoration: none;
-    padding: .2em 1em;
+table tr:last-child td:last-child {
+	-moz-border-radius-bottomright:3px;
+	-webkit-border-bottom-right-radius:3px;
+	border-bottom-right-radius:3px;
 }
-
-.btn-danger, 
-.btn-success, 
-.btn-info, 
-.btn-warning, 
-.btn-primary {
-    width: 105px;
-}
-
-.btn-default {
-    margin-bottom: 40px;
-}
-/*-------------------------------------------------------------*/
-
-#head {
-	width: 100%;
-    text-align: center;
-    background-color: #3F51B5;
-}
-
-
-#footer {
-	 width: 100%;
-    text-align: center;
-    background-color: #3F51B5;
+table tr:hover td {
+	background: #f2f2f2;
+	background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
+	background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);	
 }
