--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -1904,6 +1904,14 @@ video {
     margin-left: 20px
 }
 
+.cart-buttons .input  {
+    width: 28%;
+    padding: 15px 0;
+    float: right;
+    margin-left: 20px;
+}
+
+
 table.cart-contents {
     width: 100%;
     margin: 0;
@@ -2106,6 +2114,12 @@ table.cart-contents .currency {
         float: none!important
     }
     .cart-buttons .btn {
+        display: block;
+        float: none;
+        margin: 0 0 20px;
+        width: 100%
+    }
+    .cart-buttons .input {
         display: block;
         float: none;
         margin: 0 0 20px;
